@@ -1,10 +1,11 @@
 package com.stevekung.fishofthieves.entity.ai;
 
+import java.util.List;
+import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import com.mojang.datafixers.util.Pair;
 import com.stevekung.fishofthieves.FishOfThieves;
 import com.stevekung.fishofthieves.entity.ai.behavior.CreateFishFlock;
@@ -32,7 +33,7 @@ public class DevilfishAi
         initCoreActivity(brain);
         initIdleActivity(brain);
         initFightActivity(brain);
-        brain.setCoreActivities(ImmutableSet.of(Activity.CORE));
+        brain.setCoreActivities(Set.of(Activity.CORE));
         brain.setDefaultActivity(Activity.IDLE);
         brain.useDefaultActivity();
         return brain;
@@ -42,11 +43,11 @@ public class DevilfishAi
     {
         if (FishOfThieves.CONFIG.general.neutralFishBehavior)
         {
-            fish.getBrain().setActiveActivityToFirstValid(ImmutableList.of(Activity.FIGHT, Activity.IDLE));
+            fish.getBrain().setActiveActivityToFirstValid(List.of(Activity.FIGHT, Activity.IDLE));
         }
         else
         {
-            fish.getBrain().setActiveActivityToFirstValid(ImmutableList.of(Activity.IDLE));
+            fish.getBrain().setActiveActivityToFirstValid(List.of(Activity.IDLE));
         }
     }
 
@@ -55,7 +56,6 @@ public class DevilfishAi
         fish.getBrain().setMemory(MemoryModuleType.LONG_JUMP_COOLDOWN_TICKS, AbstractThievesFishAi.TIME_BETWEEN_BREACH.sample(fish.getRandom()));
     }
 
-    //@formatter:off
     private static void initCoreActivity(Brain<Devilfish> brain)
     {
         brain.addActivity(Activity.CORE, 0, ImmutableList.of(
@@ -74,7 +74,7 @@ public class DevilfishAi
     {
         brain.addActivity(Activity.IDLE, ImmutableList.of(
                 Pair.of(0, SetEntityLookTargetSometimes.create(EntityType.PLAYER, 6.0F, UniformInt.of(30, 60))),
-                Pair.of(1, new RunOne<>(ImmutableList.of(
+                Pair.of(1, new RunOne<>(List.of(
                         Pair.of(AbstractThievesFishAi.avoidRepellent(), 1),
                         Pair.of(new FollowTemptation(livingEntity -> 1.25F), 1),
                         Pair.of(new CreateFishFlock(), 2),
@@ -82,7 +82,7 @@ public class DevilfishAi
                         Pair.of(new FishBreaching<>(AbstractThievesFishAi.TIME_BETWEEN_BREACH, 0.2F, 0.12f), 4)
                 ))),
                 Pair.of(2, new StartAttackingIgnoreFlockLeader<>(DevilfishAi::findNearestValidAttackTarget)),
-                Pair.of(3, new GateBehavior<>(ImmutableMap.of(MemoryModuleType.WALK_TARGET, MemoryStatus.VALUE_ABSENT), ImmutableSet.of(), GateBehavior.OrderPolicy.ORDERED, GateBehavior.RunningPolicy.TRY_ALL, ImmutableList.of(
+                Pair.of(3, new GateBehavior<>(Map.of(MemoryModuleType.WALK_TARGET, MemoryStatus.VALUE_ABSENT), Set.of(), GateBehavior.OrderPolicy.ORDERED, GateBehavior.RunningPolicy.TRY_ALL, List.of(
                         Pair.of(RandomStroll.swim(1.0F), 2),
                         Pair.of(SetWalkTargetFromLookTarget.create(0.5F, 3), 3),
                         Pair.of(BehaviorBuilder.triggerIf(Entity::isInWaterOrBubble), 5))))));
@@ -95,7 +95,6 @@ public class DevilfishAi
                 SetWalkTargetFromAttackTargetIfTargetOutOfReach.create(1.25f),
                 MeleeAttack.create(20)), MemoryModuleType.ATTACK_TARGET);
     }
-    //@formatter:on
 
     private static Optional<? extends LivingEntity> findNearestValidAttackTarget(Devilfish fish)
     {
